--- a/play.yaml
+++ b/play.yaml
@@ -1,1 +1,21 @@
+ - name: Install Docker on Debian
+   hosts: all
+   become: true
+   tasks:
+    - name: Update APT package index
+      apt:
+        update_cache: yes
+        cache_valid_time: 3600
+    - name: Pull Flask image from DockerHub
+      docker_image:
+        name: 9515524259/pythonudatha:v1
+        source: pull
 
+    - name: Run Flask container
+      docker_container:
+        name: flaskapp
+        image: 9515524259/pythonudatha:v1
+        state: started
+        restart_policy: always
+        ports:
+          - "88:5000"
