--- a/play.yaml
+++ b/play.yaml
@@ -5,6 +5,7 @@
     - name: Update APT package index
       apt:
         update_cache: yes
+        cache_valid_time: 3600
     - name: Run Flask container
       docker_container:
         name: flaskapp
