--- a/kubernets.yaml
+++ b/kubernets.yaml
@@ -19,6 +19,6 @@ spec:
         - name: gar-connection
       containers:
       - name: c23
-        image: us-central1-docker.pkg.dev/winter-monolith-477705-m8/resp/python22
+        image: us-central1-docker.pkg.dev/winter-monolith-477705-m8/resp/python22:v22
         ports:
         - containerPort: 5000
