--- a/kubernets.yaml
+++ b/kubernets.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flask-deploy
-  namespace: sujith
+  namespace: siva-k8s
   labels:
     app: python-app
 spec:
